--- a/spec/fixtures/cassettes/authenticate.yml
+++ b/spec/fixtures/cassettes/authenticate.yml
@@ -20,21 +20,31 @@ http_interactions:
     headers:
       Content-Type:
       - application/json
-      X-Error-Detail:
-      - Invalid email or password.
-      Cache-Control:
-      - no-cache
-      X-Request-Id:
-      - 3135ef1e-c2ff-4ebd-9ef3-84f81719f663
-      X-Runtime:
-      - '0.003065'
       Content-Length:
       - '40'
+      Connection:
+      - keep-alive
+      Status:
+      - 401 Unauthorized
+      Cache-Control:
+      - no-cache
+      X-Error-Detail:
+      - Invalid email or password.
+      X-Runtime:
+      - '0.218876'
+      X-Request-Id:
+      - d1fdb5d1-5e08-4b9f-9153-7ac91689d986
+      Date:
+      - Wed, 26 Sep 2018 20:37:08 GMT
+      X-Powered-By:
+      - Phusion Passenger 5.3.1
+      Server:
+      - nginx/1.14.0 + Phusion Passenger 5.3.1
     body:
       encoding: UTF-8
       string: '{"message":"Invalid email or password."}'
     http_version: 
-  recorded_at: Fri, 09 Mar 2018 11:20:57 GMT
+  recorded_at: Wed, 26 Sep 2018 20:37:08 GMT
 - request:
     method: post
     uri: http://localhost:3000/locomotive/api/v3/my_account.json
@@ -55,21 +65,31 @@ http_interactions:
     headers:
       Content-Type:
       - application/json
-      ETag:
-      - W/"8e497a154dca317960b23d7d1bfa7251"
-      Cache-Control:
-      - max-age=0, private, must-revalidate
-      X-Request-Id:
-      - 5ea41529-a8bf-4cd8-a690-2f005979635c
-      X-Runtime:
-      - '0.050731'
       Content-Length:
       - '250'
+      Connection:
+      - keep-alive
+      Status:
+      - 201 Created
+      Cache-Control:
+      - max-age=0, private, must-revalidate
+      ETag:
+      - W/"dee6b1c938803658bf23ded93edc449f"
+      X-Runtime:
+      - '0.037922'
+      X-Request-Id:
+      - 0a6fd119-299d-48f5-9065-2d635aaa53f9
+      Date:
+      - Wed, 26 Sep 2018 20:37:08 GMT
+      X-Powered-By:
+      - Phusion Passenger 5.3.1
+      Server:
+      - nginx/1.14.0 + Phusion Passenger 5.3.1
     body:
       encoding: UTF-8
-      string: '{"_id":"5aa26e19e051bb8a0de44ece","created_at":"2018-03-09T11:20:57Z","updated_at":"2018-03-09T11:20:57Z","name":"John","email":"john@doe.net","locale":"en","api_key":"ddb35822ed0ebc95083e3ed1b506361bb94f10b2","super_admin":false,"local_admin":false}'
+      string: '{"_id":"5babedf4a9533064ec0350d4","created_at":"2018-09-26T20:37:08Z","updated_at":"2018-09-26T20:37:08Z","name":"John","email":"john@doe.net","locale":"en","api_key":"8ed79fb207e4eacf922a7d030138be545f98ccda","super_admin":false,"local_admin":false}'
     http_version: 
-  recorded_at: Fri, 09 Mar 2018 11:20:57 GMT
+  recorded_at: Wed, 26 Sep 2018 20:37:08 GMT
 - request:
     method: post
     uri: http://localhost:3000/locomotive/api/v3/tokens.json
@@ -90,24 +110,34 @@ http_interactions:
     headers:
       Content-Type:
       - application/json
-      ETag:
-      - W/"f002e74c360f53454cb2d1c4dc596c9d"
-      Cache-Control:
-      - max-age=0, private, must-revalidate
-      X-Request-Id:
-      - b4b4c001-6a51-422f-87f5-c55e1e22880d
-      X-Runtime:
-      - '0.004271'
       Content-Length:
       - '32'
+      Connection:
+      - keep-alive
+      Status:
+      - 201 Created
+      Cache-Control:
+      - max-age=0, private, must-revalidate
+      ETag:
+      - W/"54fbe8a83f4a578879f58ded5b7adf50"
+      X-Runtime:
+      - '0.007055'
+      X-Request-Id:
+      - db76cb6c-9e85-4233-b4ca-b31760b02ec0
+      Date:
+      - Wed, 26 Sep 2018 20:37:08 GMT
+      X-Powered-By:
+      - Phusion Passenger 5.3.1
+      Server:
+      - nginx/1.14.0 + Phusion Passenger 5.3.1
     body:
       encoding: UTF-8
-      string: '{"token":"7ussE5FK8ZQAWxoYWaoJ"}'
+      string: '{"token":"hE1AJhyKRVCvfaWUAqWF"}'
     http_version: 
-  recorded_at: Fri, 09 Mar 2018 11:20:57 GMT
+  recorded_at: Wed, 26 Sep 2018 20:37:08 GMT
 - request:
     method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=7ussE5FK8ZQAWxoYWaoJ
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=hE1AJhyKRVCvfaWUAqWF
     body:
       encoding: US-ASCII
       string: ''
@@ -119,7 +149,7 @@ http_interactions:
       X-Locomotive-Account-Email:
       - admin@locomotivecms.com
       X-Locomotive-Account-Token:
-      - 7ussE5FK8ZQAWxoYWaoJ
+      - hE1AJhyKRVCvfaWUAqWF
   response:
     status:
       code: 200
@@ -127,24 +157,36 @@ http_interactions:
     headers:
       Content-Type:
       - application/json
-      ETag:
-      - W/"f50f010a60faed3360aeeea1e3c7a890"
+      Transfer-Encoding:
+      - chunked
+      Connection:
+      - keep-alive
+      Status:
+      - 200 OK
       Cache-Control:
       - max-age=0, private, must-revalidate
-      X-Request-Id:
-      - e8bbcf8c-f607-4f56-ac39-0beafc90ad7b
+      ETag:
+      - W/"9c825b2ccbfb0b1db27457250e1d163a"
       X-Runtime:
-      - '0.005462'
-      Content-Length:
-      - '261'
+      - '0.018540'
+      X-Request-Id:
+      - c361da84-e02e-4234-a800-7be054d333b9
+      Date:
+      - Wed, 26 Sep 2018 20:37:08 GMT
+      X-Powered-By:
+      - Phusion Passenger 5.3.1
+      Server:
+      - nginx/1.14.0 + Phusion Passenger 5.3.1
+      Content-Encoding:
+      - gzip
     body:
       encoding: UTF-8
-      string: '{"_id":"5aa26db4e051bb89c3fe7684","created_at":"2018-03-09T11:19:16Z","updated_at":"2018-03-09T11:19:16Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
+      string: '{"_id":"5babed90a9533062ea501b61","created_at":"2018-09-26T20:35:28Z","updated_at":"2018-09-26T20:35:28Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
     http_version: 
-  recorded_at: Fri, 09 Mar 2018 11:20:57 GMT
+  recorded_at: Wed, 26 Sep 2018 20:37:08 GMT
 - request:
     method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=7ussE5FK8ZQAWxoYWaoJ
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=hE1AJhyKRVCvfaWUAqWF
     body:
       encoding: US-ASCII
       string: ''
@@ -156,7 +198,7 @@ http_interactions:
       X-Locomotive-Account-Email:
       - admin@locomotivecms.com
       X-Locomotive-Account-Token:
-      - 7ussE5FK8ZQAWxoYWaoJ
+      - hE1AJhyKRVCvfaWUAqWF
   response:
     status:
       code: 200
@@ -164,19 +206,31 @@ http_interactions:
     headers:
       Content-Type:
       - application/json
-      ETag:
-      - W/"f50f010a60faed3360aeeea1e3c7a890"
+      Transfer-Encoding:
+      - chunked
+      Connection:
+      - keep-alive
+      Status:
+      - 200 OK
       Cache-Control:
       - max-age=0, private, must-revalidate
-      X-Request-Id:
-      - 60488f67-93ca-49c7-9292-e0f9c115dc9a
+      ETag:
+      - W/"9c825b2ccbfb0b1db27457250e1d163a"
       X-Runtime:
-      - '0.005633'
-      Content-Length:
-      - '261'
+      - '0.008966'
+      X-Request-Id:
+      - c87ad837-8491-4467-8eff-4601cae4e617
+      Date:
+      - Wed, 26 Sep 2018 20:37:08 GMT
+      X-Powered-By:
+      - Phusion Passenger 5.3.1
+      Server:
+      - nginx/1.14.0 + Phusion Passenger 5.3.1
+      Content-Encoding:
+      - gzip
     body:
       encoding: UTF-8
-      string: '{"_id":"5aa26db4e051bb89c3fe7684","created_at":"2018-03-09T11:19:16Z","updated_at":"2018-03-09T11:19:16Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
+      string: '{"_id":"5babed90a9533062ea501b61","created_at":"2018-09-26T20:35:28Z","updated_at":"2018-09-26T20:35:28Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
     http_version: 
-  recorded_at: Fri, 09 Mar 2018 11:20:57 GMT
+  recorded_at: Wed, 26 Sep 2018 20:37:08 GMT
 recorded_with: VCR 4.0.0
